feat: update website entry

--- a/index.html
+++ b/index.html
@@ -167,17 +167,12 @@
       </p>
       <p>
         <a href="./test/mint-ui">
-          实验
+          vue组件
         </a>
       </p>
       <p>
         <a href="./infinite/index.html">
-          测试
-        </a>
-      </p>
-      <p>
-        <a href="#">
-          微博
+          infinite测试
         </a>
       </p>
     </div>
