--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@
 
     <div class="link-list">
       <p>
+        <a href="./txt-vlog">
+          笔记
+        </a>
+      </p>
+      <p>
         <a href="./blog">
           博客
         </a>
